--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
-     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="style/style.css">
 
      <!-- BOX ICONS -->
      <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> 
@@ -12,7 +12,7 @@
 </head>
 <body>
     
-    <header >
+    <header>
         <nav class="navbar">
             <i id="logo" class='bx bx-book-open'></i>
         
