--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
         </nav>
         
         <div class="todo-name">
-            <h1>
-                CURTI LIST
-            </h1>
-
-            <button class="sun-button">
-                <i class='bx bxs-sun'></i>
-            </button>
+            <div class="name-btn">
+                <h1>
+                    CURTI LIST
+                </h1>
+                <button class="sun-button">
+                    <i class='bx bxs-sun'></i>
+                </button>
+            </div>
             
             <div class="todo-add">
                 <input type="text" placeholder="name list" class="add-name">
