--- a/index.html
+++ b/index.html
@@ -35,11 +35,15 @@
                 <input type="text" placeholder="name list" class="add-name">
                 
                 <button class="btn-add">
-                    +
+                    <i class='bx bx-plus'></i>
                 </button>
             </div>
         </div>
     </header>
+
+    <div class="container-todo">
+        
+    </div>
 
 </body>
 </html>
