--- a/index.html
+++ b/index.html
@@ -42,11 +42,19 @@
     </header>
 
     <div class="container-todo">
+
         <div class="todo">
             <i  class='bx bx-check'></i>
             <h3 class="todo-title" >Nome lista</h3>
             <i class='bx bx-trash'></i>
         </div>
+
+        <div class="todo">
+            <i  class='bx bx-check'></i>
+            <h3 class="todo-title" >Nome lista</h3>
+            <i class='bx bx-trash'></i>
+        </div>
+        
     </div>
 
 </body>
