--- a/index.html
+++ b/index.html
@@ -44,15 +44,13 @@
     <div class="container-todo">
 
         <div class="todo">
-            <i  class='bx bx-check'></i>
+            <button class="check-todo">
+                <i  class='bx bx-check'></i>
+            </button>
             <h3 class="todo-title" >Nome lista</h3>
-            <i class='bx bx-trash'></i>
-        </div>
-
-        <div class="todo">
-            <i  class='bx bx-check'></i>
-            <h3 class="todo-title" >Nome lista</h3>
-            <i class='bx bx-trash'></i>
+            <button class="delete-tood">
+                <i class='bx bx-trash'></i>
+            </button>
         </div>
         
     </div>
