--- a/index.html
+++ b/index.html
@@ -52,8 +52,19 @@
                 <i class='bx bx-trash'></i>
             </button>
         </div>
+
+        <div class="todo done">
+            <button class="check-todo">
+                <i  class='bx bx-check'></i>
+            </button>
+            <h3 class="todo-title" >Nome lista</h3>
+            <button class="delete-tood">
+                <i class='bx bx-trash'></i>
+            </button>
+        </div>
         
     </div>
 
+    <script src="script.js"></script>
 </body>
 </html>
