--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </button>
         </div>
 
-        <div class="todo done">
+        <div class="todo">
             <button class="check-todo">
                 <i  class='bx bx-check'></i>
             </button>
