--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <i  class='bx bx-check'></i>
             </button>
             <h3 class="todo-title" >Nome lista</h3>
-            <button class="delete-tood">
+            <button class="delete-todo">
                 <i class='bx bx-trash'></i>
             </button>
         </div>
@@ -58,7 +58,7 @@
                 <i  class='bx bx-check'></i>
             </button>
             <h3 class="todo-title" >Nome lista</h3>
-            <button class="delete-tood">
+            <button class="delete-todo">
                 <i class='bx bx-trash'></i>
             </button>
         </div>
