--- a/index.html
+++ b/index.html
@@ -48,17 +48,7 @@
                 <i  class='bx bx-check'></i>
             </button>
             <h3 class="todo-title" >Nome lista</h3>
-            <button class="delete-todo">
-                <i class='bx bx-trash'></i>
-            </button>
-        </div>
-
-        <div class="todo">
-            <button class="check-todo">
-                <i  class='bx bx-check'></i>
-            </button>
-            <h3 class="todo-title" >Nome lista</h3>
-            <button class="delete-todo">
+            <button onclick="deleteClick()" class="delete-todo">
                 <i class='bx bx-trash'></i>
             </button>
         </div>
