--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h1>
                     CURTI LIST
                 </h1>
-                <button class="sun-button">
+                <button class="sun-button" onclick="btnLuz()">
                     <i class='bx bxs-sun'></i>
                 </button>
             </div>
